@@ -1,3 +1,7 @@
+2008-05-30  higepon  <higepon@users.sourceforge.jp>
+
+        * Port.cpp (TextualOutputPort::putPair): Fixed bug of (write '(quote)).
+
 2008-05-29  higepon  <higepon@users.sourceforge.jp>
 
         * freeproc.cpp : Added load for internal use.
